--- a/aboutMe.html
+++ b/aboutMe.html
@@ -17,7 +17,7 @@
                 and (max-width:480px)">
                 <div id ="nav">
                 <ol> 
-                        <img src="banner.png" style="width:100px;height:100px;" >
+                        <img src="banner.png" alt="logo" style="width:100px;height:100px;" >
                         <a href="index.html">Home</a>
                         <a href="aboutMe.html">About-Me</a>
                         <a href="project.html">Project</a>
@@ -26,11 +26,11 @@
                 </div> 
 
                 <div id="article">
-                    <img src="aboutMe.jpg">
+                    <img src="aboutMe.jpg" alt="Picture of Katheer">
                     <p> Hello I am Katheer Senthil Vel. I am 19 years old and I am currently a full time student in <a href="https://ontariotechu.ca">Ontario Tech University.</a> <br />
                         My origin is India though I was born and raised in the Middle East. </p>
                     <video controls> 
-                        <source src="intro.mp4">
+                        <source src="intro.mp4" alt="Video of Katheer">
                     </video controls>
                 </div>
 
