--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                 and (max-width:480px)">
                 <div id ="nav">
                 <ol> 
-                        <img src="banner.png" style="width:100px;height:100px;" >
+                        <img src="banner.png" alt="logo" style="width:100px;height:100px;" >
                         <a href="index.html">Home</a>
                         <a href="aboutMe.html">About-Me</a>
                         <a href="project.html">Project</a>
