--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
 
                 <div id ="nav">
                 <ol> 
-                        <img src="banner.png">
+                        <img src="banner.png" alt="logo">
                         <a href="index.html">Home</a>
                         <a href="aboutMe.html">About-Me</a>
                         <a href="project.html">Project</a>
